--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="./shuffle.js"></script>
+    <script src="./Session02.js"></script>
     <!-- <script src="./instructor.js"></script> -->
     <!-- <script src="./match.js"></script> -->
     <div class="card"></div>
