--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
-    <script src="./Session02.js"></script>
-    <!-- <script src="./instructor.js"></script> -->
-    <!-- <script src="./match.js"></script> -->
-    <div class="card"></div>
+    <script src="./game.js" type="module"></script>
 </body>
-
 </html>
