--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+    <audio controls autoplay loop>
+        <source src="./unity.mp3" type="audio/mpeg">
+    </audio>
     <script src="./game.js" type="module"></script>
 </body>
+
 </html>
