--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <audio controls autoplay loop>
-        <source src="./unity.mp3" type="audio/mpeg">
+    <audio autoplay loop id="audio">
+        <source src="./unity.mp3" type="audio/mp3">
     </audio>
     <script src="./game.js" type="module"></script>
 </body>
