--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
-    <script src="./Game.js" type="module"></script>
+    <script src="./mainGame.js" type="module"></script>
     <!-- <script src="./Card.js" type="module"></script> -->
 </body>
 
